# fixmatch

./: build_datasets.sh  pyproject.toml
.dvc/: config
experiments/balanced/: cifar10.d.d.rac.1_250-1.dvc  cifar10.d.d.rac.2_250-1.dvc  cifar10.d.d.rac.3_250-1.dvc  cifar10.d.d.rac.4_250-1.dvc
experiments/cifar10-25000-linear-1/: cifar10.d.d.rac.1_250-1.dvc  cifar10.d.d.rac.2_250-1.dvc  cifar10.d.d.rac.3_250-1.dvc  cifar10.d.d.rac.4_250-1.dvc
experiments/cifar10-25000-linear-10/: .gitignore  cifar10.d.d.rac.1_250-1.dvc  cifar10.d.d.rac.2_250-1.dvc  cifar10.d.d.rac.3_250-1.dvc  cifar10.d.d.rac.4_250-1.dvc
experiments/cifar10-25000-linear-10-no-resample/: .gitignore  cifar10.d.d.rac.1_250-1.dvc  cifar10.d.d.rac.2_250-1.dvc  cifar10.d.d.rac.3_250-1.dvc  cifar10.d.d.rac.4_250-1.dvc
experiments/cifar10-25000-linear-10-no-resample-2x/: cifar10.d.d.rac.1_250-1.dvc  cifar10.d.d.rac.2_250-1.dvc  cifar10.d.d.rac.3_250-1.dvc  cifar10.d.d.rac.4_250-1.dvc
experiments/cifar10-30000-linear-5/: cifar10.d.d.rac.1_250-1.dvc  cifar10.d.d.rac.2_250-1.dvc  cifar10.d.d.rac.3_250-1.dvc  cifar10.d.d.rac.4_250-1.dvc
experiments/cifar10-50000-linear-1/: cifar10.d.d.rac.1_250-1.dvc  cifar10.d.d.rac.2_250-1.dvc  cifar10.d.d.rac.3_250-1.dvc  cifar10.d.d.rac.4_250-1.dvc
libml/: data.py
notebooks/: Unbalanced Dataset Generation.ipynb
pipelines/: setup_data.dvc  setup_unbalanced_data.dvc
unbalanced_data/: .gitignore
