[tool.poetry]
name = "fixmatch"
version = "0.1.0"
description = ""
authors = ["Daniel Suess <daniel@dsuess.me>"]

[tool.poetry.dependencies]
python = "^3.7"
absl-py = "*"
easydict = "*"
numpy = "*"
tensorflow-gpu = "~=1.14"
tqdm = "*"
dvc = "^0.92.1"
scipy = "^1.4.1"
pillow = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
