[tool.poetry]
name = "fixmatch"
version = "0.1.0"
description = ""
authors = ["Daniel Suess <daniel@dsuess.me>"]

[tool.poetry.dependencies]
python = "^3.7"
absl-py = "*"
easydict = "*"
numpy = "*"
tensorflow-gpu = "~=1.14"
tqdm = "*"
dvc = "^0.92.1"
scipy = "^1.4.1"
pillow = "^7.1.1"
black = "^19.10b0"
papermill = "^2.1.0"
ipykernel = "^5.2.0"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
boto3 = "^1.12.48"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.2"
nbstripout = "^0.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
